@@ -1,3 +1,7 @@
+17 March 2014: Wouter
+	- Speed up zone parsing (.nl reads 40% faster).
+	  The rrtype_from_string routine is called often, optimised it.
+
 14 March 2014: Wouter
 	- tag 4.0.3
 	- trunk has 4.0.4 in development.
